--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "postcss": "^8.1.14",
+    "postcss-url": "^10.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
