test: 修复测试在低版本node上不通过的问题

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
           useLockFile: false
           install-command: yarn --silent
 
+      - name: Lint
+        run: yarn lint
+
       - name: Test
         run: yarn test --ci --coverage --maxWorkers=2
 
