--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
   ],
   "compilerOptions": {
     "module": "esnext",
-    "target": "esnext",
+    "target": "es2019",
     "lib": [
       "dom",
       "esnext"
