refactor: 优化类型提示，更改回调参数
更好的类型支持，现在传入数据不会被更改，在onUpdate内自行更改

BREAKING CHANGE: ref更改为innerRef，回调的参数由item变为record

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "sourceMap": true,
     // match output dir to input dir. e.g. dist/index instead of dist/src/index
     "rootDir": "./src",
-    // stricter type-checking for stronger correctness. Recommended by TS
-    "strict": true,
+    // 设为false，因为有些泛型限制太大
+    "strict": false,
     // linter checks for common issues
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
