--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.1-alpha",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -60,7 +60,6 @@
     "@storybook/addons": "^6.1.10",
     "@storybook/react": "^6.1.10",
     "@types/classnames": "^2.2.11",
-    "@types/hammerjs": "^2.0.36",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -84,7 +83,6 @@
     "ahooks": "^2.9.2",
     "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
-    "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
     "mobx": "4.7.0",
     "mobx-react-lite": "1.5.2"
