--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -77,14 +77,14 @@
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "mobx": "4.7.0",
+    "mobx-react-lite": "1.5.2"
   },
   "dependencies": {
     "ahooks": "^2.9.2",
     "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
-    "lodash": "^4.17.20",
-    "mobx": "4.7.0",
-    "mobx-react-lite": "1.5.2"
+    "lodash": "^4.17.20"
   }
 }
