--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
+    "conventional-changelog-cli": "^2.1.1",
     "husky": "^4.3.6",
     "identity-obj-proxy": "^3.0.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "mobx": "4.7.0",
+    "mobx-react-lite": "1.5.2",
     "postcss": "^8.1.14",
     "postcss-url": "^10.1.1",
     "react": "^17.0.1",
@@ -78,9 +81,7 @@
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
-    "typescript": "^3.9.7",
-    "mobx": "4.7.0",
-    "mobx-react-lite": "1.5.2"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "ahooks": "^2.9.2",
