--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "conventional-changelog-cli": "^2.1.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.3.6",
     "identity-obj-proxy": "^3.0.0",
     "less": "^3.12.2",
